deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-jekyll
spec:
  replicas: 3
  selector:
    matchLabels:
      app: blog-jekyll
  template:
    metadata:
      labels:
        app: blog-jekyll
    spec:
      containers:
        - name: blog
          image: jonesrussell/blog-app:v1.0.0
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
