service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blog-jekyll
spec:
  selector:
    app: blog-jekyll
  ports:
  - protocol: TCP
    port: 80
  type: LoadBalancer
