ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - blog.jonesrussell42.xyz
    secretName: blog-tls
  rules:
  - host: blog.jonesrussell42.xyz 
    http:
      paths:
      - backend:
          serviceName: blog-jekyll 
          servicePort: 80
