kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-jekyll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-jekyll
  template:
    metadata:
      labels:
        app: blog-jekyll
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: blog
          image: jonesrussell/blog-app:1.1.2
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              memory: 512Mi
              cpu: "1"
            requests:
              memory: 256Mi
              cpu: "0.2"
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: blog-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - blog.jonesrussell42.xyz
      secretName: blog-tls
  rules:
    - host: blog.jonesrussell42.xyz
      http:
        paths:
          - backend:
              serviceName: blog-jekyll
              servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: blog-jekyll
spec:
  selector:
    app: blog-jekyll
  ports:
    - protocol: TCP
      port: 80
  type: ClusterIP
